// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`less() should fail when value is not less than limit 1`] = `
Object {
  "errors": Array [],
  "message": "Value should be less than 1",
  "path": Array [],
  "value": 5,
}
`;

exports[`less() should fail when value is not less than limit 2`] = `
Object {
  "errors": Array [],
  "message": "Value should be less than 5",
  "path": Array [],
  "value": 5,
}
`;

exports[`less() should fail when value is not less than limit which is a reference 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [],
      "message": "Value should be less than 1",
      "path": Array [
        "b",
      ],
      "value": 5,
    },
  ],
  "message": "Value should have a valid shape",
  "path": Array [],
  "value": Object {
    "a": 1,
    "b": 5,
  },
}
`;

exports[`less() should support custom message 1`] = `
Object {
  "errors": Array [],
  "message": "Custom message",
  "path": Array [],
  "value": 5,
}
`;
